fix ui if the window is too short

--- a/src/static/css/stake.less
+++ b/src/static/css/stake.less
@@ -50,11 +50,13 @@
         .token-number {
             font-size: 24px;
             color: var(--primary-text);
+            font-family: DINAlternate-Bold, DINAlternate;
         }
 
         .token-number-none {
             font-size: 24px;
             color: var(--disable);
+            font-family: DINAlternate-Bold, DINAlternate;
         }
 
         .pending-box {
